# evidence-mcp

./: .gitignore  README.md  pyproject.toml
docs/charts/: BarChart.md  LineChart.md  _index.md
docs/components/: BigValue.md  DataTable.md  Value.md  _index.md
docs/inputs/: Dropdown.md  _index.md
docs/layouts/: Grid.md  _index.md
docs/queries/: _index.md
docs/syntax/: _index.md  queries.md
src/evidence_mcp/: __init__.py  config.py  server.py
src/evidence_mcp/models/: __init__.py  schemas.py
src/evidence_mcp/services/: __init__.py  doc_registry.py  evidence_client.py
tests/: __init__.py  test_doc_registry.py  test_schemas.py  test_server.py
